--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
     ],
     "require": {
         "php": "^7.2",
-        "illuminate/support": "6.*"
+        "illuminate/support": "^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
-        "illuminate/database": "6.*",
-        "illuminate/events": "6.*"
+        "illuminate/database": "^6.0",
+        "illuminate/events": "^6.0"
     },
     "autoload": {
         "files": [
