--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
     ],
     "require": {
         "php": "^7.2",
-        "illuminate/support": "^6.0"
+        "illuminate/support": "^5.*|^6.*|^7.*|^8.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
-        "illuminate/database": "^6.0",
-        "illuminate/events": "^6.0"
+        "illuminate/database": "^5.*|^6.*|^7.*|^8.*",
+        "illuminate/events": "^5.*|^6.*|^7.*|^8.*"
     },
     "autoload": {
         "files": [
